k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:

      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: frontend-storage
          mountPath: /usr/share/nginx/html

      volumes:
      - name: frontend-storage
        persistentVolumeClaim:
          claimName: frontend-pvc
